[gd_scene load_steps=35 format=3 uid="uid://dwtnlealkcqyc"]

[ext_resource type="Script" path="res://scripts/hud.gd" id="1_8fah8"]
[ext_resource type="PackedScene" uid="uid://b2csmmvtfpbpp" path="res://scenes/color_palette.tscn" id="2_u6jp2"]
[ext_resource type="StyleBox" uid="uid://b3llvv66mby1a" path="res://assets/ColorPicker.tres" id="3_nbvmn"]
[ext_resource type="Texture2D" uid="uid://c8gjbqojg5e5d" path="res://assets/check.svg" id="4_8rhmf"]
[ext_resource type="StyleBox" uid="uid://c4vx8atkcl802" path="res://assets/AddCloseButtons.tres" id="4_krvw1"]
[ext_resource type="Texture2D" uid="uid://t3rhyfgjr6m3" path="res://assets/close.svg" id="5_7ybkb"]
[ext_resource type="Texture2D" uid="uid://blkotc4gixhdl" path="res://assets/add.svg" id="7_jaayj"]
[ext_resource type="FontFile" uid="uid://tq3ngwg7q26l" path="res://assets/ShareTechMono-Regular.ttf" id="8_88nnd"]
[ext_resource type="FontFile" uid="uid://ctinep7t72xrg" path="res://assets/PixelifySans-Regular.ttf" id="9_sypjv"]
[ext_resource type="FontFile" uid="uid://b2065p7er4fyu" path="res://assets/PixelifySans-Bold.ttf" id="10_223dy"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3uej4"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yi1cj"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r3tf6"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6jfog"]
border_width_left = 2
border_width_top = 2
border_width_bottom = 2
corner_radius_top_left = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eqp0u"]
bg_color = Color(0.8, 0.8, 0.8, 1)
border_width_left = 3
border_width_top = 3
corner_radius_top_left = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_imi7x"]
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rce5a"]
bg_color = Color(0.478431, 0.478431, 0.478431, 1)
border_width_bottom = 2
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="Animation" id="Animation_hvqto"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(8, -16)]
}

[sub_resource type="Animation" id="Animation_oo6i1"]
resource_name = "move"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 3.60501),
"update": 0,
"values": [Vector2(8, -16), Vector2(-312, -16)]
}

[sub_resource type="Animation" id="Animation_oj3d4"]
resource_name = "move_back"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-312, -16), Vector2(8, -16)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0x025"]
_data = {
"RESET": SubResource("Animation_hvqto"),
"move": SubResource("Animation_oo6i1"),
"move_back": SubResource("Animation_oj3d4")
}

[sub_resource type="Animation" id="Animation_8tiag"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(32, 600)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_2sbwt"]
resource_name = "show"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.8),
"transitions": PackedFloat32Array(1, 11.3137, 64.0001),
"update": 0,
"values": [Vector2(32, 600), Vector2(32, 552), Vector2(32, 550)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1, 7.21),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"show"
}, {
"args": [],
"method": &"hide"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dsp4g"]
_data = {
"RESET": SubResource("Animation_8tiag"),
"show": SubResource("Animation_2sbwt")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ue21k"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jjvsp"]
bg_color = Color(0.741176, 0.741176, 0.741176, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j1vm8"]
bg_color = Color(0.741176, 0.741176, 0.741176, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_os7k6"]
bg_color = Color(0.741176, 0.741176, 0.741176, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e4cvw"]
bg_color = Color(0.741385, 0.741385, 0.741384, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_07p4q"]
bg_color = Color(0.741176, 0.741176, 0.741176, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ke82a"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gdgix"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_icrjx"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_prmd4"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="hud" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8fah8")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PaletteBackground" type="Panel" parent="CanvasLayer"]

[node name="ColorPalette" parent="CanvasLayer" instance=ExtResource("2_u6jp2")]
offset_left = 8.0
offset_top = 256.0
offset_right = 76.0
offset_bottom = 384.0

[node name="ColorPick" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_left = 8.0
offset_top = -16.0
offset_right = 48.0
offset_bottom = 24.0

[node name="Panel" type="Panel" parent="CanvasLayer/ColorPick"]
layout_mode = 0
offset_left = 792.0
offset_top = 80.0
offset_right = 1104.0
offset_bottom = 396.0
theme_override_styles/panel = ExtResource("3_nbvmn")

[node name="ColorPicker" type="ColorPicker" parent="CanvasLayer/ColorPick"]
layout_mode = 0
offset_left = 800.0
offset_top = 128.0
offset_right = 1098.0
offset_bottom = 400.0
deferred_mode = true
picker_shape = 2
can_add_swatches = false
sampler_visible = false
color_modes_visible = false
hex_visible = false
presets_visible = false

[node name="Add" type="Button" parent="CanvasLayer/ColorPick"]
layout_mode = 0
offset_left = 1024.0
offset_top = 88.0
offset_right = 1056.0
offset_bottom = 120.0
focus_mode = 0
theme_override_colors/icon_normal_color = Color(0, 0.996078, 0, 1)
theme_override_styles/focus = SubResource("StyleBoxFlat_3uej4")
theme_override_styles/normal = ExtResource("4_krvw1")
icon = ExtResource("4_8rhmf")

[node name="Close" type="Button" parent="CanvasLayer/ColorPick"]
layout_mode = 0
offset_left = 1063.0
offset_top = 88.0
offset_right = 1095.0
offset_bottom = 120.0
focus_mode = 0
theme_override_colors/icon_normal_color = Color(1, 0, 0, 1)
theme_override_styles/focus = SubResource("StyleBoxFlat_yi1cj")
theme_override_styles/normal = ExtResource("4_krvw1")
icon = ExtResource("5_7ybkb")

[node name="ShowHide" type="Button" parent="CanvasLayer/ColorPick"]
layout_mode = 0
offset_left = 761.0
offset_top = 120.0
offset_right = 793.0
offset_bottom = 152.0
focus_mode = 0
theme_override_colors/icon_normal_color = Color(1, 1, 1, 1)
theme_override_styles/focus = SubResource("StyleBoxFlat_r3tf6")
theme_override_styles/hover = ExtResource("4_krvw1")
theme_override_styles/pressed = SubResource("StyleBoxFlat_6jfog")
theme_override_styles/normal = SubResource("StyleBoxFlat_eqp0u")
icon = ExtResource("7_jaayj")

[node name="ColorHexInput" type="TextEdit" parent="CanvasLayer/ColorPick"]
layout_mode = 0
offset_left = 803.0
offset_top = 89.0
offset_right = 1010.0
offset_bottom = 121.0
theme_override_fonts/font = ExtResource("8_88nnd")
theme_override_styles/normal = SubResource("StyleBoxFlat_imi7x")
theme_override_styles/focus = SubResource("StyleBoxFlat_rce5a")
placeholder_text = "Hexdecimal"
caret_blink = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/ColorPick"]
libraries = {
"": SubResource("AnimationLibrary_0x025")
}

[node name="ToolLabel" type="Label" parent="CanvasLayer"]
offset_left = 24.0
offset_top = 520.0
offset_right = 168.0
offset_bottom = 576.0
theme_override_colors/font_color = Color(1, 1, 1, 0.690196)
theme_override_fonts/font = ExtResource("9_sypjv")
theme_override_font_sizes/font_size = 24
text = "Brush"
vertical_alignment = 2

[node name="ImageSavedNotification" type="RichTextLabel" parent="CanvasLayer"]
modulate = Color(1, 1, 1, 0)
offset_left = 32.0
offset_top = 600.0
offset_right = 704.0
offset_bottom = 640.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("8_88nnd")
bbcode_enabled = true
text = "Image saved!"
scroll_active = false
shortcut_keys_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/ImageSavedNotification"]
libraries = {
"": SubResource("AnimationLibrary_dsp4g")
}

[node name="ProjectName" type="Label" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -176.0
offset_right = 176.0
offset_bottom = 64.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("10_223dy")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_ue21k")
text = "Project Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NewProjectWindow" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 64.0
offset_top = 40.0
offset_right = 104.0
offset_bottom = 80.0
metadata/_edit_group_ = true

[node name="Panel" type="Panel" parent="CanvasLayer/NewProjectWindow"]
layout_mode = 0
offset_right = 249.0
offset_bottom = 168.0

[node name="Name" type="LineEdit" parent="CanvasLayer/NewProjectWindow"]
layout_mode = 2
offset_left = 9.0
offset_top = 10.0
offset_right = 241.0
offset_bottom = 48.0
theme_override_fonts/font = ExtResource("9_sypjv")
placeholder_text = "Project name"
caret_blink = true

[node name="Width" type="LineEdit" parent="CanvasLayer/NewProjectWindow"]
layout_mode = 0
offset_left = 9.0
offset_top = 56.0
offset_right = 76.0625
offset_bottom = 87.0
theme_override_fonts/font = ExtResource("9_sypjv")
placeholder_text = "Width"
caret_blink = true

[node name="Height" type="LineEdit" parent="CanvasLayer/NewProjectWindow"]
layout_mode = 0
offset_left = 89.0
offset_top = 56.0
offset_right = 156.063
offset_bottom = 87.0
theme_override_fonts/font = ExtResource("9_sypjv")
placeholder_text = "Height"
caret_blink = true

[node name="Cancel" type="Button" parent="CanvasLayer/NewProjectWindow"]
layout_mode = 0
offset_left = 9.0
offset_top = 112.0
offset_right = 121.0
offset_bottom = 160.0
theme_override_fonts/font = ExtResource("10_223dy")
theme_override_font_sizes/font_size = 20
text = "Cancel"

[node name="Confirm" type="Button" parent="CanvasLayer/NewProjectWindow"]
layout_mode = 0
offset_left = 129.0
offset_top = 112.0
offset_right = 241.0
offset_bottom = 160.0
theme_override_fonts/font = ExtResource("10_223dy")
theme_override_font_sizes/font_size = 20
text = "Confirm"

[node name="OpenProjectWindow" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Panel" type="Panel" parent="CanvasLayer/OpenProjectWindow"]
layout_mode = 0
offset_left = 48.0
offset_top = 64.0
offset_right = 305.0
offset_bottom = 140.0

[node name="Label" type="Label" parent="CanvasLayer/OpenProjectWindow"]
layout_mode = 0
offset_left = 56.0
offset_top = 72.0
offset_right = 96.0
offset_bottom = 95.0
theme_override_fonts/font = ExtResource("10_223dy")
text = "Image path"

[node name="LineEdit" type="LineEdit" parent="CanvasLayer/OpenProjectWindow"]
layout_mode = 0
offset_left = 56.0
offset_top = 100.0
offset_right = 296.0
offset_bottom = 131.0
caret_blink = true

[node name="Load" type="Button" parent="CanvasLayer/OpenProjectWindow"]
layout_mode = 0
offset_left = 248.0
offset_top = 64.0
offset_right = 294.0
offset_bottom = 95.0
theme_override_fonts/font = ExtResource("10_223dy")
text = "Load"

[node name="Cancel" type="Button" parent="CanvasLayer/OpenProjectWindow"]
layout_mode = 0
offset_left = 184.0
offset_top = 64.0
offset_right = 244.0
offset_bottom = 95.0
theme_override_fonts/font = ExtResource("10_223dy")
text = "Cancel"

[node name="RenameProject" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Panel" type="Panel" parent="CanvasLayer/RenameProject"]
layout_mode = 0
offset_left = 48.0
offset_top = 64.0
offset_right = 305.0
offset_bottom = 140.0

[node name="Label" type="Label" parent="CanvasLayer/RenameProject"]
layout_mode = 0
offset_left = 56.0
offset_top = 72.0
offset_right = 96.0
offset_bottom = 95.0
theme_override_fonts/font = ExtResource("10_223dy")
text = "New name"

[node name="LineEdit" type="LineEdit" parent="CanvasLayer/RenameProject"]
layout_mode = 0
offset_left = 56.0
offset_top = 100.0
offset_right = 296.0
offset_bottom = 131.0
caret_blink = true

[node name="Done" type="Button" parent="CanvasLayer/RenameProject"]
layout_mode = 0
offset_left = 248.0
offset_top = 64.0
offset_right = 294.0
offset_bottom = 95.0
theme_override_fonts/font = ExtResource("10_223dy")
text = "Done"

[node name="Cancel" type="Button" parent="CanvasLayer/RenameProject"]
layout_mode = 0
offset_left = 184.0
offset_top = 64.0
offset_right = 244.0
offset_bottom = 95.0
theme_override_fonts/font = ExtResource("10_223dy")
text = "Cancel"

[node name="Menu" type="CanvasLayer" parent="."]

[node name="File" type="Control" parent="Menu"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Button" type="Button" parent="Menu/File"]
layout_mode = 0
offset_right = 56.0
offset_bottom = 24.0
mouse_default_cursor_shape = 2
theme_override_fonts/font = ExtResource("8_88nnd")
theme_override_font_sizes/font_size = 16
theme_override_styles/focus = SubResource("StyleBoxFlat_jjvsp")
theme_override_styles/hover = SubResource("StyleBoxFlat_j1vm8")
theme_override_styles/pressed = SubResource("StyleBoxFlat_os7k6")
theme_override_styles/normal = SubResource("StyleBoxFlat_e4cvw")
text = "File"

[node name="Dropdown" type="Panel" parent="Menu/File"]
visible = false
layout_mode = 0
offset_left = 32.0
offset_top = 24.0
offset_right = 128.0
offset_bottom = 184.0
theme_override_styles/panel = SubResource("StyleBoxFlat_07p4q")

[node name="Save" type="Button" parent="Menu/File/Dropdown"]
layout_mode = 0
offset_left = 8.0
offset_right = 103.0
offset_bottom = 32.0
mouse_default_cursor_shape = 2
theme_override_fonts/font = ExtResource("8_88nnd")
theme_override_styles/focus = SubResource("StyleBoxFlat_ke82a")
theme_override_styles/hover = SubResource("StyleBoxFlat_gdgix")
theme_override_styles/pressed = SubResource("StyleBoxFlat_icrjx")
theme_override_styles/normal = SubResource("StyleBoxFlat_prmd4")
text = "Save"
alignment = 0

[node name="New" type="Button" parent="Menu/File/Dropdown"]
layout_mode = 0
offset_left = 8.0
offset_top = 32.0
offset_right = 103.0
offset_bottom = 64.0
mouse_default_cursor_shape = 2
theme_override_fonts/font = ExtResource("8_88nnd")
theme_override_styles/focus = SubResource("StyleBoxFlat_ke82a")
theme_override_styles/hover = SubResource("StyleBoxFlat_gdgix")
theme_override_styles/pressed = SubResource("StyleBoxFlat_icrjx")
theme_override_styles/normal = SubResource("StyleBoxFlat_prmd4")
text = "New
"
alignment = 0

[node name="Open" type="Button" parent="Menu/File/Dropdown"]
layout_mode = 0
offset_left = 8.0
offset_top = 64.0
offset_right = 103.0
offset_bottom = 96.0
mouse_default_cursor_shape = 2
theme_override_fonts/font = ExtResource("8_88nnd")
theme_override_styles/focus = SubResource("StyleBoxFlat_ke82a")
theme_override_styles/hover = SubResource("StyleBoxFlat_gdgix")
theme_override_styles/pressed = SubResource("StyleBoxFlat_icrjx")
theme_override_styles/normal = SubResource("StyleBoxFlat_prmd4")
text = "Open"
alignment = 0

[node name="Export" type="Button" parent="Menu/File/Dropdown"]
layout_mode = 0
offset_left = 8.0
offset_top = 96.0
offset_right = 103.0
offset_bottom = 128.0
mouse_default_cursor_shape = 2
theme_override_fonts/font = ExtResource("8_88nnd")
theme_override_styles/focus = SubResource("StyleBoxFlat_ke82a")
theme_override_styles/hover = SubResource("StyleBoxFlat_gdgix")
theme_override_styles/pressed = SubResource("StyleBoxFlat_icrjx")
theme_override_styles/normal = SubResource("StyleBoxFlat_prmd4")
text = "Export"
alignment = 0

[node name="Rename" type="Button" parent="Menu/File/Dropdown"]
layout_mode = 0
offset_left = 8.0
offset_top = 128.0
offset_right = 103.0
offset_bottom = 160.0
mouse_default_cursor_shape = 2
theme_override_fonts/font = ExtResource("8_88nnd")
theme_override_styles/focus = SubResource("StyleBoxFlat_ke82a")
theme_override_styles/hover = SubResource("StyleBoxFlat_gdgix")
theme_override_styles/pressed = SubResource("StyleBoxFlat_icrjx")
theme_override_styles/normal = SubResource("StyleBoxFlat_prmd4")
text = "Rename"
alignment = 0

[connection signal="color_deleted" from="CanvasLayer/ColorPalette" to="." method="_on_color_palette_color_deleted"]
[connection signal="color_changed" from="CanvasLayer/ColorPick/ColorPicker" to="." method="_on_color_picker_color_changed"]
[connection signal="pressed" from="CanvasLayer/ColorPick/Add" to="." method="_on_add_pressed"]
[connection signal="pressed" from="CanvasLayer/ColorPick/Close" to="." method="_on_close_pressed"]
[connection signal="pressed" from="CanvasLayer/ColorPick/ShowHide" to="." method="_on_show_hide_pressed"]
[connection signal="text_changed" from="CanvasLayer/ColorPick/ColorHexInput" to="." method="_on_color_hex_input_changed"]
[connection signal="pressed" from="CanvasLayer/NewProjectWindow/Cancel" to="." method="_on_cancel_pressed"]
[connection signal="pressed" from="CanvasLayer/NewProjectWindow/Confirm" to="." method="_on_confirm_pressed"]
[connection signal="pressed" from="CanvasLayer/OpenProjectWindow/Load" to="." method="_on_open_load_pressed"]
[connection signal="pressed" from="CanvasLayer/OpenProjectWindow/Cancel" to="." method="_on_open_cancel_pressed"]
[connection signal="pressed" from="CanvasLayer/RenameProject/Done" to="." method="_on_rename_done_pressed"]
[connection signal="pressed" from="CanvasLayer/RenameProject/Cancel" to="." method="_on_rename_cancel_pressed"]
[connection signal="pressed" from="Menu/File/Button" to="." method="_on_file_button_pressed"]
[connection signal="pressed" from="Menu/File/Dropdown/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="Menu/File/Dropdown/New" to="." method="_on_new_pressed"]
[connection signal="pressed" from="Menu/File/Dropdown/Open" to="." method="_on_open_pressed"]
[connection signal="pressed" from="Menu/File/Dropdown/Export" to="." method="_on_export_pressed"]
[connection signal="pressed" from="Menu/File/Dropdown/Rename" to="." method="_on_rename_pressed"]
